[b][color=orange]v4.72[/color], 04.02.2021[/b][list]
[*]AutoButtons: Add more openable items
[*]Armory: Fix enchants for strength and agi classes
[*]LFG Info: Reskin the role icons[/list]


[b][color=orange]v4.71[/color], 02.02.2021[/b][list]
[*]LocPanel: Add Cypher of Relocation to port items
[*]AFK/FlightMode: Added a covenant texture
[*]Skins: Various updates
[*]Misc: Replace the Maw Threat Widget with a simple StatusBar
[*]AutoButtons: Add openable items
[*]AutoButtons: Added 2 more Bars in total now of 5
[*]Armory: Added an indicator to show missing enchants/gems
[*]Fonts: Replace GothamNarrow fonts with a newer one
[*]MicroBar: Added a Shadow
[*]GameMenu: Added some new NPC from Shadowlands
[*]RaidBuffReminder: Added a Weapon enchant indicator
[*]Chat: Added an option to disable the custom "Come online.." message[/list]


[b][color=orange]v4.70[/color], 21.12.2020[/b][list]
[*]Take account for the new skin api in BigWigs
[*]Layout: Update the position for Bags/Bank[/list]


[b][color=orange]v4.69[/color], 20.12.2020[/b][list]
[*]Updated GarrisonUI Skin
[*]Updated CovenantRenown Skin
[*]Added back the Quick Join messages to my notification
[*]Updated some utility items for the AutoButtons
[*]Update my item alerts
[*]Added right click to EncounterJournal Button on the MicroBar to open Weekly Rewards
[*]Added some hearthstones to the MicroBar and LocPanel
[*]Updated ChatLinks
[*]Updated some reminders[/list]


[b][color=orange]v4.68[/color], 05.12.2020[/b][list]
[*]AutoButtons: Added a new category: FOODVENDOR
[*]Added some more vignettes to be ignored. Thx isp
[*]Updated Garrison skin
[*]Updated PlayerChoice skin
[*]Added an own BigWigs Queue Timers
[*]Added some hearthstones to MicroBar[/list]


[b][color=orange]v4.67[/color], 29.11.2020[/b][list]
[*]AutoButtons: Added/Updated Shadowlands Pots/Flasks
[*]LocPanel: Updated Teleport Items
[*]Updated Rectangle Minimap to work in Torghast
[*]Added some vignettes to my blacklist in the Notifications